# HyperGP

./: .gitignore  .pypirc  License.txt  MANIFEST.in  README.md  environment.yml  fitness.txt  get_verify.py  readthedocs.yaml  requirements.txt  res.txt  setup.py  ssh-keygen -t rsa -C "cszhitongma@mail.scut.edu.cn"  ssh-keygen -t rsa -C "cszhitongma@mail.scut.edu.cn".pub  tox.ini  workflow_test.py
.github/workflows/: build.yml  issue_manage.yml  version_set.py
HyperGP/: CMakeLists.txt  Makefile  __init__.py  workflow.py
HyperGP/base/: base_struct.py  prog_basic.py
HyperGP/libs/: __init__.py  population.py  primitive_set.py  utils.py
HyperGP/libs/representation/: TGP.py
HyperGP/mods/: tree2graph.py  tree2graph_py.py
HyperGP/monitors/: data_record.py
HyperGP/nn/: __init__.py
HyperGP/operators/: __init__.py
HyperGP/operators/crossover/: tree_crv.py
HyperGP/operators/execution/tree_exec/: compiler_v1.py  compiler_v2.py  executor.py
HyperGP/operators/mutation/: tree_mut.py
HyperGP/operators/selection/: tree_slt.py
HyperGP/src/: cash_backend.cc  cuda_mem_manager.h  dependent_module.cu  exec_cuda_backend.cu  ndarray.py  ndarray_cuda_backend copy 2.cu  ndarray_cuda_backend copy.cu  ndarray_cuda_backend.cu  new_util_backend.cc  ops_backend.h  paras.cu  tensor_backend_selection.py  utils_backend.cc  utils_backend.cu
HyperGP/tensor/: __init__.py
HyperGP/tensor_libs/: __init__.py  tensor_basic.py  tensor_ops.py
HyperGP/tensor_libs/_src/: _tensor_ops.py
docs/: environment.yml  environment_docs.yml  requirements.txt  requirements_1.txt  requirements_docs.txt
docs/source/: Installation Guide.rst  Quick Start.rst  about.rst  conf.py  contributing.rst  index.rst
docs/source/API Reference/: Executor.rst  Population.rst  PrimitiveSet.rst  Representation.rst  States.rst  _Executor.md  _PrimitiveSet.md  _workflow.md  index.rst  workflow.rst
docs/source/API Reference/Tensor/: basic_ops.rst  broadcast.rst  datatype.md  image_process.rst  index.rst
docs/source/API Reference/Tensor/_autosummary/: HyperGP.nn.conv_2D.rst  HyperGP.nn.gauss_filter.rst  HyperGP.nn.lap_filter.rst  HyperGP.nn.mean_filter.rst  HyperGP.nn.median_filter.rst  HyperGP.nn.sobel_filter.rst  HyperGP.tensor.T.rst  HyperGP.tensor.abs.rst  HyperGP.tensor.add.rst  HyperGP.tensor.all.rst  HyperGP.tensor.any.rst  HyperGP.tensor.arccos.rst  HyperGP.tensor.arcsin.rst  HyperGP.tensor.arctan.rst  HyperGP.tensor.argmax.rst  HyperGP.tensor.argmin.rst  HyperGP.tensor.ceil.rst  HyperGP.tensor.concatenate.rst  HyperGP.tensor.cos.rst  HyperGP.tensor.det.rst  HyperGP.tensor.diagonal_sum.rst  HyperGP.tensor.div.rst  HyperGP.tensor.dot.rst  HyperGP.tensor.empty.rst  HyperGP.tensor.exp.rst  HyperGP.tensor.floor.rst  HyperGP.tensor.full.rst  HyperGP.tensor.inv.rst  HyperGP.tensor.log10.rst  HyperGP.tensor.log2.rst  HyperGP.tensor.loge.rst  HyperGP.tensor.max.rst  HyperGP.tensor.mean.rst  HyperGP.tensor.min.rst  HyperGP.tensor.mul.rst  HyperGP.tensor.ones.rst  HyperGP.tensor.sign.rst  HyperGP.tensor.sin.rst  HyperGP.tensor.sqrt.rst  HyperGP.tensor.std.rst  (+248 more)
docs/source/API Reference/_representation/: HyperGP.library.GEPIndv.rst  HyperGP.library.LGPIndv.rst  HyperGP.library.TGPIndv.rst  HyperGP.libs.GEPIndv.rst  HyperGP.libs.LGPIndv.rst  HyperGP.libs.TGPIndv.rst  PyGP.library.GEPIndv.rst  PyGP.library.LGPIndv.rst  PyGP.library.TGPIndv.rst  PyGP.library.representation.TGP.TGPIndv.rst
docs/source/API Reference/_states/: HyperGP.library.states.ParaStates.rst  HyperGP.library.states.PopBaseStates.rst  HyperGP.library.states.ProgBuildStates.rst  HyperGP.libs.states.ParaStates.rst  HyperGP.libs.states.PopBaseStates.rst  HyperGP.libs.states.ProgBuildStates.rst  HyperGP.states.ParaStates.rst  HyperGP.states.PopBaseStates.rst  HyperGP.states.ProgBuildStates.rst  PyGP.library.ParaStates.rst  PyGP.library.PopBaseStates.rst  PyGP.library.ProgBuildStates.rst  PyGP.library.states.ParaStates.rst  PyGP.library.states.PopBaseStates.rst  PyGP.library.states.ProgBuildStates.rst
docs/source/Developer Guide/: index.rst
docs/source/Installation Guide/: index.rst
docs/source/User Guide/: Image Classification.rst  Multi Population.rst  Multi Task.rst  Quick Start.rst  Self Define.rst  Symbolic Regression.rst  _Quick Start.md  index.rst
docs/source/User Library/: index.rst  mutation.rst
docs/source/User Library/Algorithms/: index.rst
docs/source/User Library/Crossover/: index.rst
docs/source/User Library/Mutation/: index.rst
docs/source/User Library/Operators/: Crossover.rst  Mutation.rst  Selection.rst  index.rst
docs/source/User Library/Operators/_mutations/: PyGP.operators.mutation.RandHoistMut.rst  PyGP.operators.mutation.RandPointMut.rst  PyGP.operators.mutation.RandTrMut.rst  PyGP.operators.mutation.tree_mut.RandHoistMut.rst  PyGP.operators.mutation.tree_mut.RandPointMut.rst
docs/source/User Library/Selection/: index.rst
examples/: workflow_test.py
